👌(section) fix basic block element alignment in section
Recently Section plugin has been allowed to include simple text and
image in its content items on course_information placeholder. This
new configuration was not correctly integrated and so direct block
element (paragraph, list, images, etc..) was incorrectly
horizontally centered.

This commit fix the behavior for direct block element in section
contents in its Sass component.

--- a/src/frontend/scss/components/templates/richie/section/_section.scss
+++ b/src/frontend/scss/components/templates/richie/section/_section.scss
@@ -44,10 +44,11 @@ section {
       @include sv-flex(1, 0, 100%);
       margin: 0 auto 0.5rem;
       padding: 0 1rem;
+    }
 
-      @include media-breakpoint-up(lg) {
-        padding: 0 20%;
-      }
+    & > img {
+      display: block;
+      margin: 0 auto 1rem;
     }
 
     // Ensure caesura always takes full width with some space around
